--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-svg": "^15.12.0",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
